; ModuleID = '/home/carl/AnghaBench/linux/net/ncsi/extr_ncsi-cmd.c_ncsi_cmd_handler_ae.c'
source_filename = "/home/carl/AnghaBench/linux/net/ncsi/extr_ncsi-cmd.c_ncsi_cmd_handler_ae.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.ncsi_cmd_arg = type { i32*, i32* }
%struct.ncsi_cmd_ae_pkt = type { %struct.TYPE_2__, i32, i32 }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sk_buff*, %struct.ncsi_cmd_arg*)* @ncsi_cmd_handler_ae to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ncsi_cmd_handler_ae(%struct.sk_buff* %0, %struct.ncsi_cmd_arg* %1) #0 {
  %3 = alloca %struct.sk_buff*, align 8
  %4 = alloca %struct.ncsi_cmd_arg*, align 8
  %5 = alloca %struct.ncsi_cmd_ae_pkt*, align 8
  store %struct.sk_buff* %0, %struct.sk_buff** %3, align 8
  store %struct.ncsi_cmd_arg* %1, %struct.ncsi_cmd_arg** %4, align 8
  %6 = load %struct.sk_buff*, %struct.sk_buff** %3, align 8
  %7 = call %struct.ncsi_cmd_ae_pkt* @skb_put_zero(%struct.sk_buff* %6, i32 12)
  store %struct.ncsi_cmd_ae_pkt* %7, %struct.ncsi_cmd_ae_pkt** %5, align 8
  %8 = load %struct.ncsi_cmd_arg*, %struct.ncsi_cmd_arg** %4, align 8
  %9 = getelementptr inbounds %struct.ncsi_cmd_arg, %struct.ncsi_cmd_arg* %8, i32 0, i32 1
  %10 = load i32*, i32** %9, align 8
  %11 = getelementptr inbounds i32, i32* %10, i64 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.ncsi_cmd_ae_pkt*, %struct.ncsi_cmd_ae_pkt** %5, align 8
  %14 = getelementptr inbounds %struct.ncsi_cmd_ae_pkt, %struct.ncsi_cmd_ae_pkt* %13, i32 0, i32 2
  store i32 %12, i32* %14, align 4
  %15 = load %struct.ncsi_cmd_arg*, %struct.ncsi_cmd_arg** %4, align 8
  %16 = getelementptr inbounds %struct.ncsi_cmd_arg, %struct.ncsi_cmd_arg* %15, i32 0, i32 0
  %17 = load i32*, i32** %16, align 8
  %18 = getelementptr inbounds i32, i32* %17, i64 1
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @htonl(i32 %19)
  %21 = load %struct.ncsi_cmd_ae_pkt*, %struct.ncsi_cmd_ae_pkt** %5, align 8
  %22 = getelementptr inbounds %struct.ncsi_cmd_ae_pkt, %struct.ncsi_cmd_ae_pkt* %21, i32 0, i32 1
  store i32 %20, i32* %22, align 4
  %23 = load %struct.ncsi_cmd_ae_pkt*, %struct.ncsi_cmd_ae_pkt** %5, align 8
  %24 = getelementptr inbounds %struct.ncsi_cmd_ae_pkt, %struct.ncsi_cmd_ae_pkt* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load %struct.ncsi_cmd_arg*, %struct.ncsi_cmd_arg** %4, align 8
  %27 = call i32 @ncsi_cmd_build_header(i32* %25, %struct.ncsi_cmd_arg* %26)
  ret i32 0
}

declare dso_local %struct.ncsi_cmd_ae_pkt* @skb_put_zero(%struct.sk_buff*, i32) #1

declare dso_local i32 @htonl(i32) #1

declare dso_local i32 @ncsi_cmd_build_header(i32*, %struct.ncsi_cmd_arg*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
